<resources>
    <string name="app_name">News</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favourite">favourite</string>
    <string name="title_news">news</string>
    <string name="details">Details</string>
    <string name="comment">Comment</string>
    <string name="following">Folloing</string>
    <string name="profile">Profile</string>
    <string name="logout">LogOut</string>
    <string name="delete_account">delete account</string>
    <string name="no_saved_article">No saved article</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>