<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_follow"
        android:icon="@drawable/ic_following"
        android:title="@string/following">

    </item>
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />


    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_favourite" />

</menu>